Fixed icmppingsec UserParameter

--- a/zabbix_agentd.conf
+++ b/zabbix_agentd.conf
@@ -11,4 +11,4 @@ UserParameter=custom.vfs.vdev.discovery,/opt/zabbix-scripts/custom.vfs.vdev.disc
 UserParameter=custom.vfs.vdev.stat[*],/opt/zabbix-scripts/custom.vfs.vdev.stat.sh $1 $2
 UserParameter=custom.icmpping[*],/usr/bin/ping -c1 -W1 -q -n $1 &>/dev/null && echo 1 || echo 0
 UserParameter=custom.icmppingloss[*],/usr/bin/ping -c4 -W1 -q -n $1 2>/dev/null | /bin/grep received | /bin/awk -F '[ %]' '{print $$6}'
-UserParameter=custom.icmppingsec[*],/usr/bin/ping -c4 -W1 -q -n 192.168.45.3 2>/dev/null | /bin/tail -n 1 | /bin/awk -F'[ /]' '{print $8}'
+UserParameter=custom.icmppingsec[*],/usr/bin/ping -c4 -W1 -q -n $1 2>/dev/null | /bin/tail -n 1 | /bin/awk -F'[ /]' '{print $$8}'
