--- a/zabbix_agentd.conf
+++ b/zabbix_agentd.conf
@@ -3,6 +3,7 @@ LogFile=/var/log/zabbix/zabbix_agentd.log
 Server=zabbix01.prd.dream.upd.edu.ph,zabbix02.prd.dream.upd.edu.ph,zabbix03.prd.dream.upd.edu.ph
 ServerActive=zabbix01.prd.dream.upd.edu.ph,zabbix02.prd.dream.upd.edu.ph,zabbix03.prd.dream.upd.edu.ph
 AllowRoot=1
+Timeout=30
 Hostname=<Host name, must be the same to host settings in Web GUI>
 Include=/etc/zabbix/zabbix_agentd.d/
 UserParameter=custom.vfs.pdev.discovery,/opt/zabbix-scripts/custom.vfs.pdev.discovery.sh
