--- a/zabbix_agentd.conf
+++ b/zabbix_agentd.conf
@@ -10,6 +10,6 @@ UserParameter=custom.vfs.pdev.discovery,/opt/zabbix-scripts/custom.vfs.pdev.disc
 UserParameter=custom.vfs.pdev.stat[*],/opt/zabbix-scripts/custom.vfs.pdev.stat.sh $1 $2
 UserParameter=custom.vfs.vdev.discovery,/opt/zabbix-scripts/custom.vfs.vdev.discovery.sh
 UserParameter=custom.vfs.vdev.stat[*],/opt/zabbix-scripts/custom.vfs.vdev.stat.sh $1 $2
-UserParameter=custom.icmpping[*],/usr/bin/ping -c1 -W1 -q -n $1 &>/dev/null && echo 1 || echo 0
-UserParameter=custom.icmppingloss[*],/usr/bin/ping -c4 -W1 -q -n $1 2>/dev/null | /bin/grep received | /bin/awk -F '[ %]' '{print $$6}'
-UserParameter=custom.icmppingsec[*],/usr/bin/ping -c4 -W1 -q -n $1 2>/dev/null | /bin/tail -n 1 | /bin/awk -F'[ /]' '{print $$8/1000}'
+UserParameter=custom.icmpping[*],/bin/ping -c1 -W1 -q -n $1 &>/dev/null && echo 1 || echo 0
+UserParameter=custom.icmppingloss[*],/bin/ping -c4 -W1 -q -n $1 2>/dev/null | /bin/grep received | /bin/awk -F '[ %]' '{print $$6}'
+UserParameter=custom.icmppingsec[*],/bin/ping -c4 -W1 -q -n $1 2>/dev/null | /bin/tail -n 1 | /bin/awk -F'[ /]' '{print $$8/1000}'
