--- a/zabbix_agentd.conf
+++ b/zabbix_agentd.conf
@@ -13,3 +13,4 @@ UserParameter=custom.vfs.vdev.stat[*],/opt/zabbix-scripts/custom.vfs.vdev.stat.s
 UserParameter=custom.icmpping[*],/bin/ping -c1 -W1 -q -n $1 &>/dev/null && echo 1 || echo 0
 UserParameter=custom.icmppingloss[*],/bin/ping -c4 -W1 -q -n $1 2>/dev/null | /bin/grep received | /bin/awk -F '[ %]' '{print $$6}'
 UserParameter=custom.icmppingsec[*],/bin/ping -c4 -W1 -q -n $1 2>/dev/null | /bin/tail -n 1 | /bin/awk -F'[ /]' '{print $$8/1000}'
+UserParameter=custom.sensor[*],/opt/zabbix-scripts/custom.sensor.py $1 $2
