Added initial FreeBSD scripts

--- a/zabbix_agentd.conf
+++ b/zabbix_agentd.conf
@@ -4,13 +4,14 @@ Server=zabbix01.prd.dream.upd.edu.ph,zabbix02.prd.dream.upd.edu.ph,zabbix03.prd.
 ServerActive=zabbix01.prd.dream.upd.edu.ph,zabbix02.prd.dream.upd.edu.ph,zabbix03.prd.dream.upd.edu.ph
 AllowRoot=1
 Timeout=30
-Hostname=<Host name, must be the same to host settings in Web GUI>
-Include=/etc/zabbix/zabbix_agentd.d/
-UserParameter=custom.vfs.pdev.discovery,/opt/zabbix-scripts/custom.vfs.pdev.discovery.sh
-UserParameter=custom.vfs.pdev.stat[*],/opt/zabbix-scripts/custom.vfs.pdev.stat.sh $1 $2
-UserParameter=custom.vfs.vdev.discovery,/opt/zabbix-scripts/custom.vfs.vdev.discovery.sh
-UserParameter=custom.vfs.vdev.stat[*],/opt/zabbix-scripts/custom.vfs.vdev.stat.sh $1 $2
+Hostname=<HOSTNAME>
+UserParameter=custom.vfs.pdev.discovery,<SCRIPT_DIR>/custom.vfs.pdev.discovery.sh
+UserParameter=custom.vfs.pdev.stat[*],<SCRIPT_DIR>/custom.vfs.pdev.stat.sh $1 $2
+UserParameter=custom.vfs.vdev.discovery,<SCRIPT_DIR>/custom.vfs.vdev.discovery.sh
+UserParameter=custom.vfs.vdev.stat[*],<SCRIPT_DIR>/custom.vfs.vdev.stat.sh $1 $2
 UserParameter=custom.icmpping[*],/bin/ping -c1 -W1 -q -n $1 &>/dev/null && echo 1 || echo 0
 UserParameter=custom.icmppingloss[*],/bin/ping -c4 -W1 -q -n $1 2>/dev/null | /bin/grep received | /bin/awk -F '[ %]' '{print $$6}'
 UserParameter=custom.icmppingsec[*],/bin/ping -c4 -W1 -q -n $1 2>/dev/null | /bin/tail -n 1 | /bin/awk -F'[ /]' '{print $$8/1000}'
-UserParameter=custom.sensor[*],/opt/zabbix-scripts/custom.sensor.py $1 $2
+UserParameter=custom.sensor[*],<SCRIPT_DIR>/custom.sensor.py $1 $2
+UserParameter=freebsd.vfs.pdev.discovery,<SCRIPT_DIR>/freebsd.vfs.pdev.query.py discovery
+UserParameter=freebsd.vfs.pdev.query[*],<SCRIPT_DIR>/freebsd.vfs.pdev.query.py $1 $2
