added backup query scripts

--- a/zabbix_agentd.conf
+++ b/zabbix_agentd.conf
@@ -13,5 +13,8 @@ UserParameter=custom.icmpping[*],/bin/ping -c1 -W1 -q -n $1 &>/dev/null && echo 
 UserParameter=custom.icmppingloss[*],/bin/ping -c4 -W1 -q -n $1 2>/dev/null | /bin/grep received | /bin/awk -F '[ %]' '{print $$6}'
 UserParameter=custom.icmppingsec[*],/bin/ping -c4 -W1 -q -n $1 2>/dev/null | /bin/tail -n 1 | /bin/awk -F'[ /]' '{print $$8/1000}'
 UserParameter=custom.sensor[*],<SCRIPT_DIR>/custom.sensor.py $1 $2
+UserParameter=custom.backup.discovery,<SCRIPT_DIR>/backup.query.py discovery
+UserParameter=custom.backup.query[*],<SCRIPT_DIR>/backup.query.py $1 $2
 UserParameter=freebsd.vfs.pdev.discovery,<SCRIPT_DIR>/freebsd.vfs.pdev.query.py discovery
 UserParameter=freebsd.vfs.pdev.query[*],<SCRIPT_DIR>/freebsd.vfs.pdev.query.py $1 $2
+
